# Multimedia-Database

./: Auth.cpp  Auth.h  CMD_Manipulation.cpp  CMakeLists.txt  Cmd_Create.cpp  Cmd_Create.h  Decoder_QE.cpp  Encoder_QE.cpp  MDB.APS  MDB.cpp  MDB.sln  MDB.vcxproj  MDB.vcxproj.filters  ProductInfo.h  Query_Engine.cpp  Query_Engine.h  README.md  SystemInfo.cpp  SystemInfo.h  cmd_Drop.cpp  cmd_Use.cpp  cmd_drop.h  globals.h
include/QE/: Auth.h  CMD_Manipulation.h  Cmd_Create.h  Decoder_QE.h  Encoder_QE.h  ProductInfo.h  Query_Engine.h  cmd_Use.h  resource.h
src/MDB_Engine/: Auth.cpp  SystemInfo.cpp
src/MDB_Engine/Query_Engine/: Cmd_Create.cpp  Query_Engine.cpp  cmd_Drop.cpp  cmd_Use.cpp
src/MDB_Engine/Query_Engine/Utils_QE/: CMD_Manipulation.cpp  Decoder_QE.cpp  Encoder_QE.cpp
